--- a/pages/001.md
+++ b/pages/001.md
@@ -6,23 +6,16 @@ permalink: /001/
 
 # Sulfur amino acid metabolism
 
-![]()
+mEPN downloads: &nbsp; 
+[GraphML](../downloads/001_Sulfur_amino_acids/Sulfur_amino_acids.graphml) &nbsp; 
+[SVG](../downloads/001_Sulfur_amino_acids/Sulfur_amino_acids.svg) &nbsp; 
+[PNG](../downloads/001_Sulfur_amino_acids/Sulfur_amino_acids.png) &nbsp; 
+[PDF](../downloads/001_Sulfur_amino_acids/Sulfur_amino_acids.pdf) &nbsp; 
 
+SBGN downloads: &nbsp; 
+[SBGN-ML](../downloads/001_Sulfur_amino_acids/Sulfur_amino_acids.sbgn) &nbsp; 
 
-
-
-## Downloads
-
-Downloads: &nbsp;  
-[GraphML](../downloads/001_Sulfur_amino_acids/Sulfur_amino_acids.graphml) &nbsp;  
-[SVG](../downloads/001_Sulfur_amino_acids/Sulfur_amino_acids.svg) &nbsp;  
-[PNG](../downloads/001_Sulfur_amino_acids/Sulfur_amino_acids.png) &nbsp;  
-[PDF](../downloads/001_Sulfur_amino_acids/Sulfur_amino_acids.pdf) &nbsp;  
-
-Other formats: &nbsp;  
-[SBGN-ML](../downloads/001_Sulfur_amino_acids/Sulfur_amino_acids.sbgn) &nbsp;  
-
-<p align="middle"><a href="/pyrimidine/"><img id="image" src="/downloads/001_Sulfur_amino_acids/Sulfur_amino_acids.png" width="340"/></a></p>
+<a href="downloads/001_Sulfur_amino_acids/Sulfur_amino_acids.svg"><img src="/downloads/001_Sulfur_amino_acids/Sulfur_amino_acids.png"/></a>
 
 
 ## Contributors
