--- a/pages/001.md
+++ b/pages/001.md
@@ -15,7 +15,7 @@ mEPN downloads: &nbsp;
 SBGN downloads: &nbsp; 
 [SBGN-ML](../downloads/001_Sulfur_amino_acids/Sulfur_amino_acids.sbgn) &nbsp; 
 
-<a href="downloads/001_Sulfur_amino_acids/Sulfur_amino_acids.svg"><img src="/downloads/001_Sulfur_amino_acids/Sulfur_amino_acids_XS.jpg"/></a>
+<a href="..downloads/001_Sulfur_amino_acids/Sulfur_amino_acids.svg"><img src="../downloads/001_Sulfur_amino_acids/Sulfur_amino_acids_XS.jpg"/></a>
 
 
 ## Contributors
